--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "bootstrap-jquery": "^3.3.2",
     "jQuery": "^1.7.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
